Fix horisontal overflow
- The cause of the overflow is somewhere in the comments sections, but it's visibly overflowing, so simply hiding it fixes that issue.

Long words and links would not break correctly on iOS, which sometimes rendered parts of posts outside the viewport. Adding word-break: break-word fixes this as it forces long words to break if they would cause an overflow on its own line.

--- a/app/styles/base/_shame.scss
+++ b/app/styles/base/_shame.scss
@@ -66,9 +66,14 @@ body {
   .settings--header {
     margin-top: 0;
   }
-  .feed-container {
-    overflow-y: hidden;
+  .stream-item-comments {
+    overflow: hidden;
   }
+}
+
+// Breaks long words and links that would otherwise cause overflow
+.full-post {
+  word-break: break-word;
 }
 
 // Hide extra whitespace created by the overflow hack above
